Fix button center, hello clickable and titles alignment

--- a/src/components/AllTechnologies.astro
+++ b/src/components/AllTechnologies.astro
@@ -67,9 +67,9 @@ import Partners from "./Partners.astro";
     padding-bottom: 5rem;
     h2 {
       position: relative;
-      right: -16%;
       text-align: right;
       align-self: flex-end;
+      margin-bottom: 2rem;
     }
     h3 {
       font-size: 2rem;
