--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -2,7 +2,7 @@
   <h1 id='title'>
     Développeur web <em>fullstack</em>, <strong>en freelance</strong> à Lille
   </h1>
-  <div class='contactWrapper'>
+  <div class='contactWrapper' onclick="document.getElementById('websiteCreation').scrollIntoView()">
     <div class='contactAvatar'>
       <img src='/images/avatar.webp' alt='Kevin Lanvin' />
     </div>
@@ -95,6 +95,7 @@
     width: 10rem;
     height: 10rem;
     z-index: 2;
+    cursor: pointer;
     .contactAvatar {
       width: 100%;
       height: 100%;
