--- a/src/components/LastWork.astro
+++ b/src/components/LastWork.astro
@@ -47,6 +47,7 @@ import BorderedButton from "./BorderedButton.astro";
       align-self: flex-end;
       z-index: 12;
       text-align: right;
+      margin-right: 12%;
     }
     h3 {
       color: white;
