--- a/src/components/WebsiteCreation.astro
+++ b/src/components/WebsiteCreation.astro
@@ -2,7 +2,7 @@
 import SquareHammer from "./SquareHammer.astro";
 ---
 
-<section class='websiteCreation'>
+<section class='websiteCreation' id="websiteCreation">
   <h2 class='subtitle animatedScrollContent'>Voyage numérique</h2>
   <div class='content'>
     <div class='text'>
@@ -74,7 +74,6 @@ import SquareHammer from "./SquareHammer.astro";
     }
     h2 {
       position: relative;
-      margin-left: -16%;
     }
     .text {
       color: #4f4f4f;
@@ -89,13 +88,13 @@ import SquareHammer from "./SquareHammer.astro";
       .services {
         font-weight: bold;
         color: #4f4f4f;
-        background: #4f4f4f0a;
         border: solid 2px #4f4f4f;
         border-radius: 5rem;
         padding: 1rem;
         backdrop-filter: blur(4px);
         text-decoration: none;
         cursor: pointer;
+        text-align: center;
       }
       .circle {
         width: 45rem;
