--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -2,13 +2,16 @@
   <h1 id='title'>
     Développeur web <em>fullstack</em>, <strong>en freelance</strong> à Lille
   </h1>
-  <div class='contactWrapper' onclick="document.getElementById('websiteCreation').scrollIntoView()">
+  <div
+    class='contactWrapper'
+    onclick="document.getElementById('websiteCreation').scrollIntoView({ behavior: 'smooth', block: 'start'})"
+  >
     <div class='contactAvatar'>
       <img src='/images/avatar.webp' alt='Kevin Lanvin' />
     </div>
     <span>Hello, moi c'est Kévin !</span>
   </div>
-  <div class="nextSectionGradient"></div>
+  <div class='nextSectionGradient'></div>
 </section>
 
 <style lang='scss'>
