Improve header responsiveness

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -97,11 +97,12 @@ const currentPath = pathname.slice(1);
   nav {
     display: flex;
     align-items: center;
-    gap: 2em;
-    padding: 0 3rem;
+    padding: 0 2rem;
     position: relative;
     overflow: hidden;
     font-size: 1rem;
+    justify-content: space-evenly;
+    flex: 1;
     .intro {
       font-style: italic;
       color: white;
