--- a/src/layouts/PortfolioLayout.astro
+++ b/src/layouts/PortfolioLayout.astro
@@ -109,6 +109,7 @@ import Footer from "../components/Footer.astro";
     overflow-x: hidden;
     width: 100vw;
     scroll-snap-type: y mandatory;
+    overscroll-behavior-y: none;
   }
 
   a {
