Fix contact font size mobile

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -154,6 +154,9 @@ import Layout from "../layouts/Layout.astro";
         padding: 1rem;
         h2 {
           font-size: 2rem;
+          strong {
+            font-size: 3rem;
+          }
         }
         .contacts {
           grid-template-columns: 1fr;
