Safari blur de ses morts

--- a/src/components/AllTechnologies.astro
+++ b/src/components/AllTechnologies.astro
@@ -96,6 +96,7 @@ import Partners from "./Partners.astro";
         border: 1px solid #ffffff80;
         border-radius: 1rem;
         backdrop-filter: blur(10px);
+        -webkit-backdrop-filter: blur(10px);
         h3 {
           font-size: 1.25rem;
         }
