--- a/src/components/BorderedButton.astro
+++ b/src/components/BorderedButton.astro
@@ -75,6 +75,7 @@ const { addedClasses = "", link = "", newTab = false } = Astro.props;
     border-radius: 5rem;
     padding: 1rem 2rem;
     backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
     width: max-content;
     max-width: 100%;
     font-weight: bold;
