--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -78,6 +78,7 @@ const currentPath = pathname.slice(1);
       height: 100%;
       z-index: -1;
       backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
     }
     .menuMobileButton {
       display: none;
