--- a/src/components/WebsiteCreation.astro
+++ b/src/components/WebsiteCreation.astro
@@ -91,7 +91,8 @@ import SquareHammer from "./SquareHammer.astro";
         border: solid 2px #4f4f4f;
         border-radius: 5rem;
         padding: 1rem;
-        backdrop-filter: blur(4px);
+        backdrop-filter: blur(5px);
+        -webkit-backdrop-filter: blur(5px);
         text-decoration: none;
         cursor: pointer;
         text-align: center;
