--- a/src/components/Prices.astro
+++ b/src/components/Prices.astro
@@ -177,6 +177,7 @@ import BorderedButton from "./BorderedButton.astro";
       width: max(75%, 1000px);
       max-width: 100%;
       backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
       background: linear-gradient(
         225deg,
         rgba(255, 255, 255, 0.3) 1.22%,
