--- a/src/components/SquareHammer.astro
+++ b/src/components/SquareHammer.astro
@@ -36,6 +36,7 @@
       align-items: center;
       padding: 1rem;
       backdrop-filter: blur(5px);
+      -webkit-backdrop-filter: blur(5px);
       .text {
         text-align: center;
         transform: rotate(45deg);
