--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -85,6 +85,7 @@ import Layout from "../layouts/Layout.astro";
       border-radius: 1rem;
       padding: 3rem;
       backdrop-filter: blur(10px);
+      -webkit-backdrop-filter: blur(10px);
       background: linear-gradient(
         225deg,
         rgba(255, 255, 255, 0.3) 1.22%,
