--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -237,6 +237,7 @@ const currentPath = pathname.slice(1);
           top: 0;
           left: 0;
           backdrop-filter: blur(10px);
+          -webkit-backdrop-filter: blur(10px);
           z-index: -1;
         }
         top: 80px;
