--- a/src/layouts/PortfolioLayout.astro
+++ b/src/layouts/PortfolioLayout.astro
@@ -25,6 +25,8 @@ import Footer from "../components/Footer.astro";
   </body>
 </html>
 
+<script>document.addEventListener("touchstart", function() {},false);</script>
+
 <style is:global>
   @font-face {
     font-family: "Poppins";
