Change muchas glacias

--- a/src/components/SquareHammer.astro
+++ b/src/components/SquareHammer.astro
@@ -1,14 +1,14 @@
 <div class='squareHammer'>
-  <div class='square'>
+  <div class='square animatedScrollContent'>
     <span class='text'>Design sur-mesure</span>
   </div>
-  <div class='square'>
+  <div class='square animatedScrollContent'>
     <span class='text'>Facilité d'utilisation et clef en main</span>
   </div>
-  <div class='square'>
+  <div class='square animatedScrollContent'>
     <span class='text'>Performance, accessibilité et référencement</span>
   </div>
-  <div class='square'>
+  <div class='square animatedScrollContent'>
     <span class='text'>Eco-conception</span>
   </div>
 </div>
