--- a/src/components/WebsiteCreation.astro
+++ b/src/components/WebsiteCreation.astro
@@ -38,7 +38,7 @@ import SquareHammer from "./SquareHammer.astro";
           stroke='url(#circleGradient)'></circle>
       </svg>
     </div>
-    <div class='bigSquare animatedScrollContent'>
+    <div class='bigSquare'>
       <SquareHammer class='squareHammer' />
     </div>
   </div>
