--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -38,7 +38,7 @@ import PortfolioLayout from "../layouts/PortfolioLayout.astro";
         mockupName='Pauline Gorlier'
       />
       <div class='scrollableCard contactMe'>
-        <h2>Faisons un bout de trajet ensemble !</h2>
+        <h2>Faisons un bout de chemin ensemble !</h2>
         <p>
           Mes projets vous intéressent et vous souhaitez que je développe
           votre site web ?
