--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,6 @@
 <footer>
   <div class='links'>
-    <a href='#'>Mentions Légales</a>
+    <a href='/mentions-legales'>Mentions Légales</a>
     <a target='blank' href='https://www.linkedin.com/in/kevin-lanvin-0208281b5'>LinkedIn</a>
     <a target='blank' href='https://www.malt.fr/profile/kevinlanvin?overview'>Malt</a>
   </div>
